# tap-fleetio

./: .gitignore  LICENSE  MANIFEST.in  README copy.md  README.md  SECURITY.md  fleetio_catalog.json  meltano.yml  pyproject.toml  setup.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature-request.yml  security.yml
.github/workflows/: release-drafter.yml  test.yml
tap_fleetio/: __init__.py  client.py  streams.py  tap.py
tap_fleetio/schemas/: contacts.json  fuel_entries.json  issues.json  parts.json  purchase_orders.json  service_entries.json  submitted_inspection_forms.json  vehicles.json
tests/: __init__.py  test_core.py
