[tool.poetry]
name = "tap-fleetio"
version = "0.0.1"
description = "`tap-fleetio` is a Singer tap for fleetio, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["John Mizerany"]
keywords = [
    "ELT",
    "fleetio",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
singer-sdk = { version="^0.42.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
singer-sdk = { version="^0.42.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_fleetio"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_fleetio"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-fleetio = 'tap_fleetio.tap:Tapfleetio.cli'
